--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .config/
 .data/
 .idea/
+.env
 
 # testing
 /coverage
@@ -20,6 +21,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
